250212 관리자 페이지 문의 게시글 초안

--- a/src/main/resources/templates/common/sidebar.html
+++ b/src/main/resources/templates/common/sidebar.html
@@ -28,9 +28,8 @@
             </button>
             <div class="collapse" id="board-collapse">
                 <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
-                    <li style="margin-left: 30px;"><a href="/admin/product-list" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">1</a></li>
-                    <li style="margin-left: 30px;"><a href="/admin/product-add" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">2</a></li>
-                    <li style="margin-left: 30px;"><a href="/admin/product-modify" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">3</a></li>
+                    <li style="margin-left: 30px;"><a href="/admin/board/support/list" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">문의 게시판</a></li>
+                    <li style="margin-left: 30px;"><a href="#" class="link-body-emphasis d-inline-flex text-decoration-none rounded text-white">리뷰 게시판</a></li>
                 </ul>
             </div>
         </li>
