250212 문의게시판 HTTP 요청 URL 경로 변경1
/support -> /board/support 변경

--- a/src/main/resources/templates/board/support_list.html
+++ b/src/main/resources/templates/board/support_list.html
@@ -48,7 +48,7 @@
 
     <!-- 게시글 작성 버튼 -->
     <div class="text-center mt-3">
-        <a href="/support/register" class="btn btn-primary">새 게시글 작성</a>
+        <a href="/board/support/register" class="btn btn-primary">새 게시글 작성</a>
     </div>
 
     <!-- 페이지네이션 -->
