--- a/src/main/resources/templates/common/navbar.html
+++ b/src/main/resources/templates/common/navbar.html
@@ -11,7 +11,7 @@
         <li><a href="/product" class="nav-link px-2">상품보기</a></li>
         <li><a href="/cart" class="nav-link px-2">장바구니</a></li>
         <li><a href="/order/list" class="nav-link px-2">주문내역</a></li>
-        <li><a href="/support/list" class="nav-link px-2">고객센터</a></li>
+        <li><a href="/board/support/list" class="nav-link px-2">고객센터</a></li>
     </ul>
 
     <div class="d-flex align-items-center flex-wrap">
