--- a/src/main/resources/templates/board/support_view.html
+++ b/src/main/resources/templates/board/support_view.html
@@ -16,7 +16,7 @@
         <!-- 게시글 상세정보 렌더링 -->
     </div>
     <div class="mt-3">
-        <a href="/support/list" class="btn btn-outline-secondary">목록으로</a>
+        <a href="/board/support/list" class="btn btn-outline-secondary">목록으로</a>
     </div>
     <!-- 답변 영역 -->
     <div class="mt-5">
