250212 디렉터리명 수정 support --> board

--- a/src/main/resources/templates/board/support_list.html
+++ b/src/main/resources/templates/board/support_list.html
@@ -10,7 +10,7 @@
     </style>
 </head>
 <script src="/js/jquery-3.7.1.min.js"></script>
-<script src="/js/support/supportList.js"></script>
+<script src="/js/board/supportList.js"></script>
 <body>
 {{> common/navbar}}
 <div class="container">
