--- a/src/main/resources/templates/board/support_view.html
+++ b/src/main/resources/templates/board/support_view.html
@@ -8,7 +8,7 @@
     <title>게시글 상세 보기</title>
 </head>
 <script src="/js/jquery-3.7.1.min.js"></script>
-<script src="/js/support/supportView.js"></script>
+<script src="/js/board/supportView.js"></script>
 <body>
 {{> common/navbar}} <!-- 네비게이션바 포함 -->
 <div class="container mt-5">
