250212 문의게시글 목록 view 업데이트

--- a/src/main/resources/templates/board/support_list.html
+++ b/src/main/resources/templates/board/support_list.html
@@ -27,10 +27,10 @@
     </div>
 
     <!-- 정렬 버튼들 -->
-    <div class="col-md-6 d-flex justify-content-end">
+    <div class="col-md-6 d-flex justify-content-start mb-4">
         <label for="sort" class="form-label me-2">정렬 기준</label>
         <select id="sort" class="form-select w-auto">
-            <option value="id">글 ID</option>
+            <option value="id">생성순</option>
         </select>
         <div class="btn-group" role="group">
             <button id="ascBtn" class="btn btn-outline-secondary" data-order="asc">오름차순</button>
