--- a/src/main/resources/templates/admin/product/product_add_admin.html
+++ b/src/main/resources/templates/admin/product/product_add_admin.html
@@ -11,6 +11,11 @@
             margin: 0; /* 기본 margin 제거 */
             padding: 0; /* 기본 padding 제거 */
         }
+        #container {
+            margin-left: 320px; /* 사이드바의 최대 너비만큼 왼쪽 여백 확보 */
+            padding: 20px; /* 내용과 경계를 띄우기 */
+            width: calc(100% - 280px); /* 사이드바 제외한 나머지 화면 차지 */
+        }
     </style>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="/js/jquery-3.7.1.min.js"></script>
@@ -18,7 +23,7 @@
 </head>
 <body>
 {{> common/sidebar }}
-<div class="container mt-5">
+<div id="container" class="container mt-5">
     <h1 class="text-center mb-4">상품 등록</h1>
     <!-- 카테고리 -->
     <div class="mb-3">
@@ -70,7 +75,7 @@
     <!-- 버튼 -->
     <div class="d-flex justify-content-between">
         <button class="btn btn-primary" onclick="registerProduct()">등록하기</button>
-        <a href="/admin/product-list" class="btn btn-secondary">취소</a>
+        <a href="/admin/product/list" class="btn btn-secondary">취소</a>
     </div>
 </div>
 
