--- a/src/main/resources/templates/admin/product/product_list_admin.html
+++ b/src/main/resources/templates/admin/product/product_list_admin.html
@@ -5,15 +5,15 @@
     <title>상품 관리</title>
     <style>
         html, body {
-            width: 100%; /* 페이지 전체 폭 차지 */
-            height: 100%; /* 페이지 전체 높이 차지 */
-            margin: 0; /* 기본 margin 제거 */
-            padding: 0; /* 기본 padding 제거 */
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
         }
         .main-content {
-            margin-left: 50px;
-            flex-grow: 1;
-            overflow-y: auto; /* 내용이 넘치면 스크롤 */
+            margin-left: 320px; /* 사이드바의 최대 너비만큼 왼쪽 여백 확보 */
+            padding: 20px; /* 내용과 경계를 띄우기 */
+            width: calc(100% - 280px); /* 사이드바 제외한 나머지 화면 차지 */
         }
     </style>
 </head>
