--- a/src/main/resources/templates/common/sidebar.html
+++ b/src/main/resources/templates/common/sidebar.html
@@ -1,6 +1,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="/css/admin/sidebar.css">
-<div class="d-flex flex-column flex-shrink-0 p-3 text-bg-dark w-25 w-md-20 w-lg-15" style="min-width: 200px; max-width: 280px;">
+<div class="sidebar d-flex flex-column text-bg-dark p-3 flex-grow-1 flex-shrink-1"
+     style="position: fixed; top: 0; left: 0; width: 300px; min-width: 150px; max-width: 300px; height: 100vh; overflow-y: auto;">
     <a href="/admin/home" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-white text-decoration-none">
         <span class="fs-4">BlommingShop</span>
     </a>
