250212 관리자 페이지 문의게시글

--- a/src/main/resources/templates/admin/board/support_list_admin.html
+++ b/src/main/resources/templates/admin/board/support_list_admin.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <script src="/js/jquery-3.7.1.min.js"></script>
-<script src="/js/board/supportList.js"></script>
+<script src="/js/admin/board/supportListAdmin.js"></script>
 <body>
 {{> common/sidebar }}
 <div id="container" class="container">
