250212 관리자 페이지 문의글 답변 API

--- a/src/main/resources/templates/admin/board/support_view_admin.html
+++ b/src/main/resources/templates/admin/board/support_view_admin.html
@@ -43,6 +43,12 @@
                 답변 대기 중입니다.
             </div>
         </div>
+        <div>
+            <h3>문의 답변</h3>
+            <label for="answer"></label>
+            <textarea class="form-control" id="answer" rows="10" required></textarea>
+            <button class="btn btn-primary" onclick="answerRegister()">작성</button>
+        </div>
     </div>
 </div>
 </body>
