--- a/src/main/resources/templates/board/support_view.html
+++ b/src/main/resources/templates/board/support_view.html
@@ -6,12 +6,17 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>게시글 상세 보기</title>
+    <style>
+        #container{
+            margin-bottom: 30px;
+        }
+    </style>
 </head>
 <script src="/js/jquery-3.7.1.min.js"></script>
 <script src="/js/board/supportView.js"></script>
 <body>
 {{> common/navbar}} <!-- 네비게이션바 포함 -->
-<div class="container mt-5">
+<div id="container" class="container mt-5">
     <div id="board-detail" class="mt-3">
         <!-- 게시글 상세정보 렌더링 -->
     </div>
