--- a/src/main/resources/templates/board/support_register.html
+++ b/src/main/resources/templates/board/support_register.html
@@ -49,6 +49,8 @@
 
     <!-- 등록 버튼 -->
     <button class="btn btn-primary" onclick="boardRegister();">등록</button>
+    <!-- 취소 버튼 -->
+    <button class="btn btn-primary" onclick="cancelRegister();">취소</button>
 </div>
 </body>
 </html>
