250212 관리자 페이지 문의 게시글 논리 삭제 API

--- a/src/main/resources/templates/admin/board/support_view_admin.html
+++ b/src/main/resources/templates/admin/board/support_view_admin.html
@@ -27,6 +27,7 @@
     </div>
     <div class="mt-3">
         <a href="/admin/board/support/list" class="btn btn-outline-secondary">목록으로</a>
+        <button class="btn btn-outline-danger" onclick="deleteBoard()">해당 게시글 삭제</button>
     </div>
     <!-- 답변 영역 -->
     <div class="mt-5">
