--- a/src/main/resources/templates/admin/product/product_add_admin.html
+++ b/src/main/resources/templates/admin/product/product_add_admin.html
@@ -54,8 +54,15 @@
 
     <!-- 사이즈 -->
     <div class="mb-3">
-        <label for="size" class="form-label">사이즈</label>
-        <input type="text" class="form-control" id="size" name="size" placeholder="상품 크기를 입력하세요">
+        <label class="form-label">사이즈</label><br>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="size" id="size1" value="일반">
+            <label class="form-check-label" for="size1">일반</label>
+        </div>
+        <div class="form-check form-check-inline">
+            <input class="form-check-input" type="radio" name="size" id="size2" value="프리미엄">
+            <label class="form-check-label" for="size2">프리미엄</label>
+        </div>
     </div>
 
     <!-- 이미지 URL -->
