250227 축하화환 텍스트 오타 수정

--- a/src/main/resources/templates/admin/product/product_add_admin.html
+++ b/src/main/resources/templates/admin/product/product_add_admin.html
@@ -35,7 +35,7 @@
             <option value="동양란">동양란</option>
             <option value="서양란">서양란</option>
             <option value="근조화환">근조화환</option>
-            <option value="축화화환">축화화환</option>
+            <option value="축화화환">축하화환</option>
             <option value="관엽화분">관엽화분</option>
         </select>
     </div>
