--- a/src/main/resources/templates/admin/product/product_modify_admin.html
+++ b/src/main/resources/templates/admin/product/product_modify_admin.html
@@ -70,9 +70,10 @@
     <!-- 이미지 URL -->
     <div class="mb-3">
         <label for="imageUrl" class="form-label">이미지</label>
+        <p id="imageUrl2">기존 이미지</p>
         <input type="file" class="form-control" id="imageUrl" name="imageUrl" accept="image/*">
         <!-- 안내 문구 추가 -->
-        <span id="imageUrl-warning" style="color: red;">이미지를 첨부하세요</span>
+        <span id="imageUrl-warning" style="color: red;">수정 할 이미지를 첨부하세요</span>
     </div>
 
     <!-- 설명 -->
